try to fix layout on ios

--- a/style.css
+++ b/style.css
@@ -31,6 +31,8 @@ body {
   width: 100%;
   padding: 10px;
   padding-top: 300px;
+  padding-left: 16px;
+  padding-right: 16px;
 
   position: relative;
 }
@@ -78,12 +80,14 @@ body {
     0 0.5px 2px rgba(0, 0, 0, 0.08),
     inset 0 0 0 0.5px rgba(255, 255, 255, 0.15);
 
-
   transition:
     transform 0.12s ease,
     box-shadow 0.12s ease,
     background 0.12s ease,
     opacity 0.4s ease;
+
+  touch-action: manipulation;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .product:active {
